[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Nicolas Ledez <github.public@ledez.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
httpx = "^0.25.0"

[tool.poetry.group.tests.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pylint = "^3.0.1"
black = "^23.9.1"
flake8 = "^6.1.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
